fix: add css to hide scroll on firefox (#1916)

--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -37,6 +37,7 @@
   &::-webkit-scrollbar-corner {
     display: none;
   }
+  scrollbar-width: none;
 }
 
 .bg-clip-text {
